# 3r-m2

./: README.md  pyproject.toml  requirements.txt
contractual/: app.py
contractual/core/: graphic.py  portfolio.py
contractual/data/: __init__.py  data.py  df.csv  dfbis.csv  saved_model.sav
contractual/tools/: graphic_tools.py  help.py  portfolio_tools.py  saved_model.sav
contractual/www/: index.js  layout.css  style.css
