[tool.poetry]
name = "clv_app"
version = "0.3.0"
description = ""
authors = ["Alexis VIALATTE <alexis.vialatte.fr@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9.13"
pathlib = "^1.0.1"
shiny = "^0.2.9"
shinywidgets = "^0.1.4"
htmltools = "^0.1.2"
lifelines = "^0.27.4"
plotly = "^5.13.0"
pandas = "^1.5.3"
numpy = "^1.24.2"
joblib = "^1.2.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
